// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutFooterBottomComponent should match the snapshot when features.showLicence is true and footer.navigation is defined 1`] = `
<div>
  <div
    class="fr-footer__bottom"
    data-testid="sticky-footer-fr-footer__bottom"
  >
    <ul
      class="fr-footer__bottom-list"
    >
      <li
        class="fr-footer__bottom-item"
      >
        <span
          data-mockid="LinkComponent"
        />
      </li>
      <li
        class="fr-footer__bottom-item"
      >
        <span
          data-mockid="LinkComponent"
        />
      </li>
    </ul>
    <div
      class="fr-footer__bottom-copy"
    >
      <p>
        Sauf mention contraire, tous les contenus de ce site sont sous
         
        <span
          data-mockid="LinkComponent"
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`LayoutFooterBottomComponent should render the licence when features.showLicence is defined 1`] = `
<div>
  <div
    class="fr-footer__bottom"
    data-testid="sticky-footer-fr-footer__bottom"
  >
    <ul
      class="fr-footer__bottom-list"
    />
    <div
      class="fr-footer__bottom-copy"
    >
      <p>
        Sauf mention contraire, tous les contenus de ce site sont sous
         
        <span
          data-mockid="LinkComponent"
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`LayoutFooterBottomComponent should render the navigation when footer.navigation is defined 1`] = `
<div>
  <div
    class="fr-footer__bottom"
    data-testid="sticky-footer-fr-footer__bottom"
  >
    <ul
      class="fr-footer__bottom-list"
    >
      <li
        class="fr-footer__bottom-item"
      >
        <span
          data-mockid="LinkComponent"
        />
      </li>
      <li
        class="fr-footer__bottom-item"
      >
        <span
          data-mockid="LinkComponent"
        />
      </li>
    </ul>
  </div>
</div>
`;
